fix: prevent mobile scroll jump on radio input focus

--- a/app/src/styles/utilities/_overlay.scss
+++ b/app/src/styles/utilities/_overlay.scss
@@ -21,7 +21,7 @@
     	rounded-md
     	shadow-md;
 
-    max-height: calc(100dvh - 2rem);
-    max-width: calc(100dvw - 2rem);
+    max-height: calc(100dvh - 3rem);
+    max-width: calc(100dvw - 3rem);
   }
 }
